--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                     </div>
                                     <div class="info">
                                         <p class="name">Clerk</p>
-                                        <p class="intro">President & COO of CorpsX LLC.</p>
+                                        <p class="intro">President &amp; COO of CorpsX LLC.</p>
                                         <p class="subject">摄影历史与技术发展</p>
                                     </div>
                                 </div>
