--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
                             <div class="cardBlock">
                                 <div class="card">
                                     <div class="avatar">
-                                        <img src="static/imgs/Orator/Clerk.jpg">
+                                        <img src="static/imgs/Orator/Percy.jpg">
                                     </div>
                                     <div class="info">
-                                        <p class="name">Clerk</p>
-                                        <p class="intro">President &amp; COO of CorpsX LLC.</p>
+                                        <p class="name">Percy Yu</p>
+                                        <p class="intro">VP Marketing of CorpsX LLC.</p>
                                         <p class="subject">摄影历史与技术发展</p>
                                     </div>
                                 </div>
@@ -348,6 +348,9 @@
         </div>
     </div>
     <div id="bg"></div>
+    <div id="stat" style="display:none">
+        <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1257434544'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s95.cnzz.com/z_stat.php%3Fid%3D1257434544' type='text/javascript'%3E%3C/script%3E"));</script>
+    </div>
     <script src="static/js/app.js"></script>
     <script src="static/js/prefixfree.min.js"></script>
     <script src="static/js/noframework.waypoints.min.js"></script>
